--- a/_posts/2022-02-22-文件系统层次结构标准3.0-中文翻译.md
+++ b/_posts/2022-02-22-文件系统层次结构标准3.0-中文翻译.md
@@ -2,7 +2,7 @@
 layout: post
 title:  "文件系统层次结构标准3.0-中文翻译"
 date:   2022-02-22 18:07:00 +0800
-categories: 杂项
+categories: Linux
 tag: 翻译
 topping: true
 ---
