--- a/_posts/2022-10-07-BMP.md
+++ b/_posts/2022-10-07-BMP.md
@@ -107,7 +107,7 @@ static uint32 bmpGetLineAlignBytes(uint32 width, eBitsPerPixel type)
 
 3). 位图高度，一般指位图有多少行。注意：当值为正时表示位图从下往上存储，左下角是起点。为负时，表示从上往下存储，左上角是起点。  
 
-4). 每像素占用的位数，当像素位数为 1, 4, 8 时，类型分别为 RGB1, RGB4, RGB8，值为调色板的索引(见[认识RGB]({{site.baseurl}}///))。类型定义：  
+4). 每像素占用的位数，当像素位数为 1, 4, 8 时，类型分别为 RGB1, RGB4, RGB8，值为调色板的索引(见[认识RGB]({{site.baseurl}}/2022/08/29/RGB/))。类型定义：  
 
 ```
 //每像素占用的位数类型
