--- a/_posts/2022-12-29-Stack.md
+++ b/_posts/2022-12-29-Stack.md
@@ -15,6 +15,8 @@ topping: true
 
 ### 栈实现
 
+#### 通用栈实现
+
 栈可以使用数组或链表来实现，这里用数组实现。  
 
 数据结构定义：  
@@ -212,6 +214,130 @@ int main(int argc, char* argv[])
     char aa = popChar(stack);
 
     printf("pop:%c, %d, %d, %d, %p\n", aa, bb, cc, dd, ptr);
+
+    stackDestory(stack);
+    return 0;
+}
+```
+--（以下为 2023-05-31 新增）  
+
+#### 单一数据类型栈实现
+
+如果栈中只有一种数据类型，可以通过　`#define ELEMENT_TYPE char` 来定义该数据类型，并按以下方式实现：  
+
+```
+//定义数据类型
+#define ELEMENT_TYPE char
+
+//栈结构
+typedef struct {
+    unsigned int stackTop;
+    unsigned int stackSize;
+    ELEMENT_TYPE *stackArray;
+}ttStack;
+
+ttStack* stackInit()
+{
+    ttStack *stack = NULL;
+    stack = (ttStack *) malloc (sizeof(ttStack));
+    if (stack == NULL)
+        return NULL;
+    stack->stackTop = 0;
+    stack->stackSize = STACK_LENGTH;
+    stack->stackArray = (ELEMENT_TYPE*)malloc(sizeof(ELEMENT_TYPE) * STACK_LENGTH);
+    if (stack->stackArray == NULL) {
+        free(stack);
+        return NULL;
+    }
+    return stack;
+}
+
+void stackDestory(ttStack* stack)
+{
+    if (stack != NULL) {
+        if (stack->stackArray != NULL) {
+            free(stack->stackArray);
+            stack->stackArray = NULL;
+        }
+        free(stack);
+        stack = NULL;
+    }
+}
+
+bool stackEmpty(ttStack* stack)
+{
+    if (stack == NULL || stack->stackTop == 0)
+        return true;
+    return false;
+}
+
+static int pushCheckAndResize(ttStack* stack, unsigned int pushSize)
+{
+    unsigned int nowSize = stack->stackSize;
+    if (stack->stackTop + pushSize <= nowSize)
+        return STACK_OK;
+
+    while (stack->stackTop + pushSize > nowSize)
+        nowSize *= 2;
+
+    printf("resize Stack %d, need:%d\n", nowSize, stack->stackTop + pushSize);
+    ELEMENT_TYPE* tmpArray = (ELEMENT_TYPE *) malloc (nowSize * sizeof(ELEMENT_TYPE));
+    if (tmpArray == NULL)
+        return STACK_RESIZE_ERR;
+
+    memcpy(tmpArray, stack->stackArray, stack->stackSize * sizeof(ELEMENT_TYPE));
+    free(stack->stackArray);
+    stack->stackArray = tmpArray;
+    stack->stackSize = nowSize;
+
+    return STACK_OK;
+}
+
+int push(ttStack* stack, ELEMENT_TYPE data)
+{
+        if (stack == NULL || stack->stackArray == NULL) {
+                printf("please init stack first\n");
+                return STACK_INIT_ERR;
+        }
+        if (pushCheckAndResize(stack, 1) != STACK_OK)
+                return STACK_PUSH_ERR;
+        stack->stackArray[stack->stackTop++] = data;
+        return STACK_OK;
+}
+
+ELEMENT_TYPE pop(ttStack* stack)
+{
+        if (stack == NULL || stack->stackArray == NULL || stack->stackTop == 0)
+                return (ELEMENT_TYPE)STACK_INIT_ERR;
+        stack->stackTop --;
+        return stack->stackArray[stack->stackTop];
+}
+
+ELEMENT_TYPE top(ttStack* stack)
+{
+        if (stack == NULL || stack->stackArray == NULL || stack->stackTop == 0)
+                return (ELEMENT_TYPE)STACK_INIT_ERR;
+        return stack->stackArray[stack->stackTop - 1];
+}
+```
+
+测试函数：  
+
+```
+int main(int argc, char* argv[])
+{
+    ttStack* stack = stackInit();
+
+    push(stack, 'a');
+    push(stack, 'b');
+    push(stack, 'c');
+    push(stack, '[');
+
+    while (!stackEmpty(stack)) {
+        char a = top(stack);
+        char b = pop(stack);
+        printf("a:%c, b:%c\n", a, b);
+    }
 
     stackDestory(stack);
     return 0;
