modify post and add draft

--- a/_posts/2023-06-04-Stack.md
+++ b/_posts/2023-06-04-Stack.md
@@ -7,7 +7,7 @@ tags: C
 topping: true
 ---
 
-栈是另一种抽象数据类型，我们在前面文章（[用数组实现栈](https://snownight22.github.io/TTworksBlog/2022/12/29/Stack/)）中讲到了它的定义和一种通用栈实现，实际应用中栈内多数只存储一种数据类型。这里我们实现一种存储单一数据类型的栈。  
+栈是另一种抽象数据类型，我们在前面文章（[用数组实现栈]({{site.baseurl}}/2022/12/29/Stack/)）中讲到了它的定义和一种通用栈实现，实际应用中栈内多数只存储一种数据类型。这里我们实现一种存储单一数据类型的栈。  
 
 ### 单一数据类型栈实现
 
