--- a/_posts/2023-06-04-Stack.md
+++ b/_posts/2023-06-04-Stack.md
@@ -15,7 +15,15 @@ topping: true
 
 ```
 //定义数据类型
-#define ELEMENT_TYPE char
+#define ELEMENT_TYPE int
+
+#define STACK_RESIZE_OK    (1)
+#define STACK_OK    (0)
+#define STACK_INIT_ERR    (-1)
+#define STACK_RESIZE_ERR    (-2)
+#define STACK_PUSH_ERR    (-3)
+
+#define STACK_LENGTH    (16)
 
 //栈结构
 typedef struct {
